# day-20-seo-roaster

./: .gitignore  Procfile  README.md  README_EN.md  main.py  pyproject.toml
src/seo_roaster/: __init__.py  analyzer.py  app.py  roasts.py
src/seo_roaster/static/: style.css  v1-candy-clay.css
src/seo_roaster/templates/: index.html
